# HistoRag-BIMAP

./: .gitignore  CLAUDE.md  EXPERIMENT_LOG.md  PLAN.md  README.md  pipeline.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.streamlit/: config.toml
configs/: label_map.json  phase0_mvp.yaml
docs/: CODE_GUIDE.md  HISTORAG – Retrieval.docx  PLAN.md  phase1_proposal.md
experiments/: experiments.csv
histoRAG/: embed.py  log.py  retrieve.py  tile.py
histoRAG/viz/: streamlit_app.py  versions.py
scripts/: download_hancock.py  embed_patches.py  evaluate.py  run_mvp.py  tile_wsis.py
src/histoRAG/: __init__.py
src/histoRAG/data/: __init__.py  dataset.py  tiler.py  wsi_loader.py
src/histoRAG/encoders/: __init__.py  base.py  clip.py  registry.py  uni.py
src/histoRAG/eval/: __init__.py  metrics.py  protocol.py
src/histoRAG/index/: __init__.py  base.py  faiss_index.py
src/histoRAG/utils/: __init__.py  config.py  logging.py  seeds.py
src/histoRAG/viz/: __init__.py  streamlit_app.py
tests/: conftest.py  test_encoder.py  test_eval.py  test_index.py  test_tiler.py
